--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# ignore database.yml
+/config/database.yml
+
 /app/assets/builds/*
 !/app/assets/builds/.keep
 
